add current user ans users list
